<resources>
    <string name="app_name">ambrScope</string>
    <string name="logout_button">Logout</string>
    <string name="my_page_button">My Page</string>
    <string name="title_activity_maps">Map</string>
    <string name="add_spot_save_button">Save</string>
    <string name="add_spot_gallery_button">Gallery</string>
    <string name="add_spot_camera_button">Camera</string>
    <string name="title_activity_add_spot_maps">Map</string>
    <string name="add_spot_button">Add spot</string>
    <string name="spot_detail_view_description">Description</string>
    <string name="spot_detail_view_image_description">Image of spot</string>
    <string name="spot_detail_view_logo_description">Logo</string>
    <string name="spot_detail_view_chance">Chance:</string>
    <string name="spot_detail_view_chance_value">Chance value</string>
    <string name="spot_detail_view_finder_method">Finder method:</string>
    <string name="spot_detail_view_finder_method_value">Finder method value</string>
    <string name="spot_detail_view_time">Time:</string>
    <string name="spot_detail_view_time_value">Time value</string>
    <string name="spot_detail_view_precise">Precise:</string>
    <string name="spot_detail_view_precise_value">Precise value</string>
    <string name="spot_detail_view_amount">Amount:</string>
    <string name="spot_detail_view_amount_value">Amount value</string>
    <string name="spot_detail_view_additional_info">Additional info:</string>
    <string name="spot_detail_view_additional_info_value">Additional info</string>
    <string name="add_spot_details_chance_description">What is the chance of finder amber here?</string>
    <string name="add_spot_details_chance_good_chance">Good</string>
    <string name="add_spot_details_chance_medium_chance">Medium</string>
    <string name="add_spot_details_chance_bad_chance">Bad</string>
    <string name="add_spot_details_finder_method_description">How did you find amber here?</string>
    <string name="add_spot_details_finder_method_eyes">Eyes</string>
    <string name="add_spot_details_finder_method_amber_flashlight">Amber flashlight</string>
    <string name="add_spot_details_finder_method_kese">Kese</string>
    <string name="add_spot_details_precise_description">Is this location precise?</string>
    <string name="add_spot_details_precise_precise">Precise</string>
    <string name="add_spot_details_precise_not_precise">Not precise</string>
    <string name="add_spot_details_time_description">What time of day and year?</string>
    <string name="add_spot_details_time_hint">Time of day and year</string>
    <string name="add_spot_details_description_description">A short description of the spot</string>
    <string name="add_spot_details_description_hint">Max 20 characters</string>
    <string name="add_spot_details_amount_description">How much amber did you find?</string>
    <string name="add_spot_details_amount_hint">Amount in grams</string>
    <string name="add_spot_details_additional_info_description">Any additional info</string>
    <string name="add_spot_details_additional_info_hint">Info</string>
    <string name="spot_row_description">Description</string>
    <string name="spot_row_delete_button">Delete</string>
    <string name="add_spot_select_help_button">Help</string>
    <string name="add_spot_select_help_message">Long press location on map to add spot there</string>
    <string name="add_spot_select_help_dismiss_button">Okay</string>
</resources>