<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SpotDetailView">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="248dp"
        tools:layout_editor_absoluteY="248dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <ImageView
                android:id="@+id/spotDetailViewImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/spot_detail_view_image_description"
                app:srcCompat="@drawable/sample" />

            <TextView
                android:id="@+id/spotDetailViewDescriptionTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/spot_detail_view_description"
                android:textSize="48sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/spotDetailViewChanceTextView"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/spot_detail_view_chance"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/spotDetailViewChanceValueTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/spot_detail_view_chance_value"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/spotDetailViewFinderMethodTextView"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/spot_detail_view_finder_method"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/spotDetailViewFinderMethodValueTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/spot_detail_view_finder_method_value"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/spotDetailViewTimeTextView"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/spot_detail_view_time"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/spotDetailViewTimeValueTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/spot_detail_view_time_value"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/spotDetailViewPreciseTextView"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/spot_detail_view_precise"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/spotDetailViewPreciseValueTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/spot_detail_view_precise_value"
                    android:textSize="24sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/spotDetailViewAmountTextView"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/spot_detail_view_amount"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/spotDetailViewAmountValueTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/spot_detail_view_amount_value"
                    android:textSize="24sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/spotDetailViewAdditionalInfoTextView"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/spot_detail_view_additional_info"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/spotDetailViewAdditionalInfoValueTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/spot_detail_view_additional_info_value"
                    android:textSize="24sp" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <fragment
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                tools:context=".SpotDetailView"
                tools:layout_editor_absoluteX="-16dp"
                tools:layout_editor_absoluteY="0dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>