<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddSpot">

    <TextView
        android:id="@+id/addSpotLocationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:text="Location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/addSpotImageView"
        android:layout_width="128dp"
        android:layout_height="127dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addSpotLocationText"
        tools:srcCompat="@drawable/sample" />

    <RadioGroup
        android:id="@+id/addSpotChanceRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addSpotImageView">

        <RadioButton
            android:id="@+id/addSpotChanceGoodChance"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_gravity="start|center_horizontal"
            android:checked="false"
            android:text="Good chance"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/addSpotMediumChance"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_gravity="start|center_horizontal"
            android:checked="false"
            android:text="Medium chance"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/addSpotBadChance"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_gravity="start|center_horizontal"
            android:checked="false"
            android:text="Bad chance"
            android:textSize="15sp" />

    </RadioGroup>

    <EditText
        android:id="@+id/addSpotTimeEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="Time of day and year"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addSpotChanceRadioGroup" />

    <RadioGroup
        android:id="@+id/addSpotFinderMethodRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addSpotImageView">

        <RadioButton
            android:id="@+id/addSpotFinderMethodEyes"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_gravity="start|center_horizontal"
            android:checked="false"
            android:text="Eyes"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/addSpotFinderMethodAmberFlashlight"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_gravity="start|center_horizontal"
            android:checked="false"
            android:text="Amber flashlight"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/addSpotFinderMethodKese"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_gravity="start|center_horizontal"
            android:checked="false"
            android:text="Kese"
            android:textSize="15sp" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/addSpotPreciseRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addSpotTimeEditText">

        <RadioButton
            android:id="@+id/addSpotPreciseYes"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_gravity="start|center_horizontal"
            android:checked="false"
            android:text="Precise"
            android:textSize="15sp"/>

        <RadioButton
            android:id="@+id/addSpotPreciseNo"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_gravity="start|center_horizontal"
            android:checked="false"
            android:text="Not precise"
            android:textSize="15sp"/>
    </RadioGroup>

    <EditText
        android:id="@+id/addSpotDescriptionEditText"
        android:layout_width="323dp"
        android:layout_height="88dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="Description"
        android:inputType="textMultiLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addSpotPreciseRadioGroup" />

    <Button
        android:id="@+id/addSpotSaveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:onClick="save"
        android:text="@string/add_spot_save_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addSpotCameraButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/add_spot_camera_button"
        app:layout_constraintStart_toEndOf="@+id/addSpotImageView"
        app:layout_constraintTop_toBottomOf="@+id/addSpotLocationText" />

    <Button
        android:id="@+id/addSpotGalleryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/add_spot_gallery_button"
        app:layout_constraintStart_toEndOf="@+id/addSpotImageView"
        app:layout_constraintTop_toBottomOf="@+id/addSpotCameraButton" />

</androidx.constraintlayout.widget.ConstraintLayout>